--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -18,6 +18,9 @@ code {
   padding: 0; /* optional, to remove padding */
 }
 
+.bft-form-field-ct {
+  position: relative;
+}
 .bft-form-field-ct label{
   position: absolute;
   margin-left: 10px;
@@ -27,7 +30,7 @@ code {
   background: #333;
   border-radius: 5px;
   margin-top: 0px;
-  padding: 20px 10px 2px 9px;
+  padding: 25px 10px 2px 9px;
   color: #ccc;
   font: 16px Helvetica,"Segoe UI",Arial,sans-serif;
 }
